syntax = "proto3";

import "tenant/tenant.proto";
import "tenant/banner.proto";
import "tenant/policyandterm.proto";
import "tenant/subscription.proto";
import "tenant/tenantprofile.proto";
import "tenant/themeconfig.proto";
import "tenant/vnpayconfig.proto";

package tenant;

service AppService {
  rpc FindOne (HeroById) returns (Hero) {}
}

message HeroById {
  int32 id = 1;
}

message Hero {
  int32 id = 1;
  string name = 2;
}